tests/toylang/neg/001514_mutation.toylang
program a = { var a while : bool; } .
